--- a/home.html
+++ b/home.html
@@ -322,6 +322,41 @@
             style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAclZlTCcV6pkP9D4Cx7Kil4TmKbWG_TXdXvXdoWqActcpmKPt_gKetEFolphy9rT6UCXi7Hk6V3lprVVU3Sv6DP1iDIrUyAzgNjycfvaLgynaPylK9D8osnTu_-276i47jD-VcxFFItt56oEoxFz0PVOdetayWkWj0nfO2ZXwW5QVzqCx6JtgtC4dAQmUtrbDCZbFpSMFOJvSrBxTdq3rqzC6_1CXvnewoSRq7GWAqoWc4e6bPmPO7IwAHbfLAvUhzWXzToWqdXuQ');">
           </div>
         </div>
+<!-- 
+      </div>
+    </aside>
+    <main id="main-content" class="flex-1 transition-all duration-300 lg:ml-[250px] p-6">
+      <div class="max-w-[1200px] mx-auto w-full flex flex-col gap-8">
+        <div class="@container">
+          <div class="relative flex flex-col justify-end overflow-hidden rounded-xl min-h-[400px] p-8 md:p-12 shadow-2xl">
+
+            <picture class="absolute inset-0 z-0">
+                <source srcset="/assets/images/hero-home.avif" type="image/avif">
+                <source srcset="/assets/images/hero-home.webp" type="image/webp">
+                <img src="/assets/images/hero-home.jpg"
+                    alt="Group of diverse university students collaborating outdoors on campus lawn with laptops"
+                    class="w-full h-full object-cover object-center"
+                    loading="eager"
+                    fetchpriority="high">
+            </picture>
+
+            <div class="absolute inset-0 bg-gradient-to-b from-transparent to-background-dark/90 pointer-events-none"></div>
+
+            <div class="relative z-10 flex flex-col gap-4 max-w-2xl">
+                <h1 id="welcome-title" class="text-4xl md:text-6xl font-black leading-tight tracking-tight text-white">
+                    Welcome back, Alex.
+                </h1>
+                <p class="text-base md:text-lg text-slate-200 font-medium max-w-lg">
+                    Don't miss out on the Annual Hackathon. Registration closes in
+                    24 hours!
+                </p>
+                <div class="flex gap-4 pt-2">
+                    
+                </div>
+            </div>
+        </div>
+        </div> -->
+
         <div id="student-profile-header" class="hidden flex items-center gap-2">
           <div
             class="size-10 rounded-full bg-slate-300 dark:bg-[#384b40] flex items-center justify-center text-slate-700 dark:text-white font-bold">
@@ -388,16 +423,16 @@
       <main id="main-content" class="flex-1 transition-all duration-300 lg:ml-[250px] p-6 pt-24">
         <div class="max-w-[1200px] mx-auto w-full flex flex-col gap-8">
           <div class="@container">
-            <div
-              class="relative flex flex-col justify-end overflow-hidden rounded-xl bg-cover bg-center min-h-[400px] p-8 md:p-12 shadow-2xl"
-              style="
-                      background-image: linear-gradient(
-                          180deg,
-                          rgba(17, 33, 23, 0) 0%,
-                          rgba(17, 33, 23, 0.9) 100%
-                        ),
-                        url('https://lh3.googleusercontent.com/aida-public/AB6AXuAPxLQp92aSOGUIgxoO8m_NmGxdx8kpS3JnbnUPgCpAci7EyiYsVjh8qrJgkjONLubshfxhUWfDEnhsVNVbU84sn6qhV_Mt-KUjup26NQw3MKqdTd4l86ZR-o33Efwq-Ey3Bm6EKPJw0JiXXB7LQfy86smYpLaG2qTt5LIA5U8eC4n2TD8WcVKfNYeo2D2IbGW0tnggxkweF6a51AktkAJPZeR73pE023Y-1i2l-aF4ZJg-abyzYCUMHrZ4og_e5HWYqqx_nSYDQB4');
-                    ">
+            <div class="relative flex flex-col justify-end overflow-hidden rounded-xl min-h-[400px] p-8 md:p-12 shadow-2xl">
+              <picture class="absolute inset-0 z-0">
+                  <source srcset="/assets/images/hero-home.avif" type="image/avif">
+                  <source srcset="/assets/images/hero-home.webp" type="image/webp">
+                  <img src="/assets/images/hero-home.jpg"
+                      alt="Group of diverse university students collaborating outdoors on campus lawn with laptops"
+                      class="w-full h-full object-cover object-center"
+                      loading="eager"
+                      fetchpriority="high">
+              </picture>
               <div class="relative z-10 flex flex-col gap-4 max-w-2xl">
                 <h1 id="welcome-title" class="text-4xl md:text-6xl font-black leading-tight tracking-tight text-white">
                   Welcome back, Alex.
