feat: add auth, role guards, and update home navigation

--- a/home.html
+++ b/home.html
@@ -322,7 +322,7 @@
             style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAclZlTCcV6pkP9D4Cx7Kil4TmKbWG_TXdXvXdoWqActcpmKPt_gKetEFolphy9rT6UCXi7Hk6V3lprVVU3Sv6DP1iDIrUyAzgNjycfvaLgynaPylK9D8osnTu_-276i47jD-VcxFFItt56oEoxFz0PVOdetayWkWj0nfO2ZXwW5QVzqCx6JtgtC4dAQmUtrbDCZbFpSMFOJvSrBxTdq3rqzC6_1CXvnewoSRq7GWAqoWc4e6bPmPO7IwAHbfLAvUhzWXzToWqdXuQ');">
           </div>
         </div>
-<!-- 
+        <!-- 
       </div>
     </aside>
     <main id="main-content" class="flex-1 transition-all duration-300 lg:ml-[250px] p-6">
@@ -390,20 +390,20 @@
           </a>
 
           <a class="flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group overflow-hidden"
-            href="../admin/participants-management.html">
+            href="admin/participants-management.html">
             <span class="material-symbols-outlined text-[24px] shrink-0 fill-current">groups</span>
             <span class="nav-label whitespace-nowrap">Participants</span>
           </a>
 
           <a class="flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group overflow-hidden"
-            href="../admin/check-in-management.html">
+            href="admin/check-in-management.html">
             <span
               class="material-symbols-outlined text-[24px] group-hover:text-primary transition-colors shrink-0">fact_check</span>
             <span class="nav-label whitespace-nowrap">Check-in</span>
           </a>
 
           <a class="flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group overflow-hidden"
-            href="../admin/badge-system.html">
+            href="admin/badge-system.html">
             <span
               class="material-symbols-outlined text-[24px] group-hover:text-primary transition-colors shrink-0">workspace_premium</span>
             <span class="nav-label whitespace-nowrap">Badge System</span>
@@ -423,15 +423,14 @@
       <main id="main-content" class="flex-1 transition-all duration-300 lg:ml-[250px] p-6 pt-24">
         <div class="max-w-[1200px] mx-auto w-full flex flex-col gap-8">
           <div class="@container">
-            <div class="relative flex flex-col justify-end overflow-hidden rounded-xl min-h-[400px] p-8 md:p-12 shadow-2xl">
+            <div
+              class="relative flex flex-col justify-end overflow-hidden rounded-xl min-h-[400px] p-8 md:p-12 shadow-2xl">
               <picture class="absolute inset-0 z-0">
-                  <source srcset="/assets/images/hero-home.avif" type="image/avif">
-                  <source srcset="/assets/images/hero-home.webp" type="image/webp">
-                  <img src="/assets/images/hero-home.jpg"
-                      alt="Group of diverse university students collaborating outdoors on campus lawn with laptops"
-                      class="w-full h-full object-cover object-center"
-                      loading="eager"
-                      fetchpriority="high">
+                <source srcset="assets/images/hero-home.avif" type="image/avif">
+                <source srcset="assets/images/hero-home.webp" type="image/webp">
+                <img src="assets/images/hero-home.jpg"
+                  alt="Group of diverse university students collaborating outdoors on campus lawn with laptops"
+                  class="w-full h-full object-cover object-center" loading="eager" fetchpriority="high">
               </picture>
               <div class="relative z-10 flex flex-col gap-4 max-w-2xl">
                 <h1 id="welcome-title" class="text-4xl md:text-6xl font-black leading-tight tracking-tight text-white">
