--- a/signup.html
+++ b/signup.html
@@ -78,12 +78,10 @@
 
             <div class="relative hidden md:flex md:w-1/2 lg:w-7/12 flex-col justify-end p-10 lg:p-16 overflow-hidden">
                 <picture class="absolute inset-0 z-0">
-                    <source srcset="/assets/images/signup-desktop.avif" type="image/avif">
-                    <source srcset="/assets/images/signup-desktop.webp" type="image/webp">
-                    <img src="/assets/images/signup-desktop.jpg" 
-                        alt="Abstract network connections technology background" 
-                        class="w-full h-full object-cover object-center" 
-                        loading="eager" fetchpriority="high">
+                    <source srcset="assets/images/signup-desktop.avif" type="image/avif">
+                    <source srcset="assets/images/signup-desktop.webp" type="image/webp">
+                    <img src="assets/images/signup-desktop.jpg" alt="Abstract network connections technology background"
+                        class="w-full h-full object-cover object-center" loading="eager" fetchpriority="high">
                 </picture>
 
                 <div class="absolute inset-0 z-10 bg-background-dark/70 mix-blend-multiply"></div>
@@ -108,12 +106,10 @@
             <div class="flex w-full md:w-1/2 lg:w-5/12 flex-col justify-center items-center p-6 sm:p-12 relative z-30">
 
                 <picture class="absolute inset-0 md:hidden z-0">
-                    <source srcset="/assets/images/signup-mobile.avif" type="image/avif">
-                    <source srcset="/assets/images/signup-mobile.webp" type="image/webp">
-                    <img src="/assets/images/signup-mobile.jpg" 
-                        alt="Futuristic technology abstract background mobile" 
-                        class="w-full h-full object-cover object-center" 
-                        loading="eager">
+                    <source srcset="assets/images/signup-mobile.avif" type="image/avif">
+                    <source srcset="assets/images/signup-mobile.webp" type="image/webp">
+                    <img src="assets/images/signup-mobile.jpg" alt="Futuristic technology abstract background mobile"
+                        class="w-full h-full object-cover object-center" loading="eager">
                 </picture>
                 <div class="absolute inset-0 bg-background-dark/90"></div>
 
